daemonset.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: sshd-monitor
spec:
  selector:
    matchLabels:
      app: sshd
  template:
    metadata:
      labels:
        app: sshd
    spec:
     containers:
       - name: sshd
         image: luksa/sshd-monitor
