emptywala.yml
apiVersion: v1
kind: Pod
metadata:
    name: myngpod
    labels:
        app: facebook
spec:
   containers:
          - image: nginx
            name: myngcontainer
            ports:
               - containerPort: 80
            volumeMounts:
               - name: htmlfolder
                 mountPath: /usr/share/nginx/html
volumes:
    - name: htmlfolder
      emptyDir: {}
