namespace.yml
apiVersion: v1
kind: Namespace
metadata:
   name: myns

3)myng1-pod

apiVersion: v1
kind: Pod
metadata:
   name: mynginxpod1
   labels:
      app: facebook
   namespace: myns
spec:
   containers:
    - image: nginx
      name: mynginxcontainer
      ports:
        - containerPort: 80
