ExternalNameservice.yml
apiVersion: v1
kind: Service
metadata:
   name: exiternal-service
spec:
   type: ExternalName
   externalName: tujanena.in
   ports:
    - port: 80

19)manual endpoint

apiVersion: v1
kind: Endpoints
metadata:
   name: myservice
subsets:
   - addresses:
         - ip: 113.13.13.13
         - ip: 115.15.15.15
     ports:
          - port: 80
