ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
spec:
  rules:
   - host: blog.gmail.com
     http:
       paths:
        - path: /blog
          pathType: Prefix 
          backend:
             service:
               name: test
               Port:
                number: 80
